// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 1`] = `
<Table
  borderless={true}
  responsiveTag="div"
  striped={true}
  tag="table"
>
  <table
    className="table table-borderless table-striped"
  >
    <thead
      id="header"
    >
      <tr>
        <th
          className="default-width"
        />
        <th
          className="default-width"
        >
          Red Alert
        </th>
        <th
          className="default-width"
        >
          risk
        </th>
        <th
          className="default-width"
        >
          No Risk
        </th>
        <th
          className="default-width"
        >
          Total
        </th>
      </tr>
    </thead>
    <tbody
      id="body"
    >
      <tr
        key="d79168ed-ae95-43d1-8e45-9078212815f6"
      >
        <td
          className="default-width"
        >
          <Link
            to="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/d79168ed-ae95-43d1-8e45-9078212815f6/3"
          >
            <a
              href="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/d79168ed-ae95-43d1-8e45-9078212815f6/3"
              onClick={[Function]}
            >
              Lang Son Province
            </a>
          </Link>
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width"
        >
          0
        </td>
      </tr>
      <tr
        key="c13b5c95-55c3-4848-9509-b82596274d96"
      >
        <td
          className="default-width"
        >
          <Link
            to="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/c13b5c95-55c3-4848-9509-b82596274d96/3"
          >
            <a
              href="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/c13b5c95-55c3-4848-9509-b82596274d96/3"
              onClick={[Function]}
            >
              Dien Bien
            </a>
          </Link>
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width"
        >
          0
        </td>
      </tr>
      <tr
        key="78a12165-3c12-471f-8755-c96bac123292"
      >
        <td
          className="default-width"
        >
          <Link
            to="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/78a12165-3c12-471f-8755-c96bac123292/3"
          >
            <a
              href="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/78a12165-3c12-471f-8755-c96bac123292/3"
              onClick={[Function]}
            >
              Hanoi
            </a>
          </Link>
        </td>
        <td
          className="default-width "
        >
          10
        </td>
        <td
          className="default-width "
        >
          9
        </td>
        <td
          className="default-width "
        >
          6
        </td>
        <td
          className="default-width"
        >
          25
        </td>
      </tr>
      <tr
        key="f7d1d9bb-95dc-43bc-8434-0dddd1f3d374"
      >
        <td
          className="default-width"
        >
          <Link
            to="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/f7d1d9bb-95dc-43bc-8434-0dddd1f3d374/3"
          >
            <a
              href="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/f7d1d9bb-95dc-43bc-8434-0dddd1f3d374/3"
              onClick={[Function]}
            >
              Loc Binh
            </a>
          </Link>
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width"
        >
          0
        </td>
      </tr>
      <tr
        key="total"
      >
        <td
          className="default-width"
          id="total"
        >
          Total(
          Province
          )
        </td>
        <td
          className="default-width "
        >
          10
        </td>
        <td
          className="default-width "
        >
          9
        </td>
        <td
          className="default-width "
        >
          6
        </td>
        <td
          className="default-width"
        >
          25
        </td>
      </tr>
    </tbody>
  </table>
</Table>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 2`] = `
<tbody
  id="body"
>
  <tr
    id="no-rows"
  >
    <td>
      There seems to be no rows here :-(
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      District
      )
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 3`] = `
<tbody
  id="body"
>
  <tr
    id="no-rows"
  >
    <td>
      There seems to be no rows here :-(
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      Commune
      )
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 4`] = `
<tbody
  id="body"
>
  <tr
    id="no-rows"
  >
    <td>
      There seems to be no rows here :-(
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      Village
      )
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 5`] = `
<tbody
  id="body"
>
  <tr
    id="no-rows"
  >
    <td>
      There seems to be no rows here :-(
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      Commune
      )
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 6`] = `
<tbody
  id="body"
>
  <tr
    id="no-rows"
  >
    <td>
      There seems to be no rows here :-(
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      District
      )
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 7`] = `
<tbody
  id="body"
>
  <tr
    key="d79168ed-ae95-43d1-8e45-9078212815f6"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/d79168ed-ae95-43d1-8e45-9078212815f6/3"
      >
        <a
          href="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/d79168ed-ae95-43d1-8e45-9078212815f6/3"
          onClick={[Function]}
        >
          Lang Son Province
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
  <tr
    key="c13b5c95-55c3-4848-9509-b82596274d96"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/c13b5c95-55c3-4848-9509-b82596274d96/3"
      >
        <a
          href="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/c13b5c95-55c3-4848-9509-b82596274d96/3"
          onClick={[Function]}
        >
          Dien Bien
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
  <tr
    key="78a12165-3c12-471f-8755-c96bac123292"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/78a12165-3c12-471f-8755-c96bac123292/3"
      >
        <a
          href="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/78a12165-3c12-471f-8755-c96bac123292/3"
          onClick={[Function]}
        >
          Hanoi
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      10
    </td>
    <td
      className="default-width "
    >
      9
    </td>
    <td
      className="default-width "
    >
      6
    </td>
    <td
      className="default-width"
    >
      25
    </td>
  </tr>
  <tr
    key="f7d1d9bb-95dc-43bc-8434-0dddd1f3d374"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/f7d1d9bb-95dc-43bc-8434-0dddd1f3d374/3"
      >
        <a
          href="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/f7d1d9bb-95dc-43bc-8434-0dddd1f3d374/3"
          onClick={[Function]}
        >
          Loc Binh
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      Province
      )
    </td>
    <td
      className="default-width "
    >
      10
    </td>
    <td
      className="default-width "
    >
      9
    </td>
    <td
      className="default-width "
    >
      6
    </td>
    <td
      className="default-width"
    >
      25
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 8`] = `
<tbody
  id="body"
>
  <tr
    id="no-rows"
  >
    <td>
      There seems to be no rows here :-(
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      District
      )
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 9`] = `
<tbody
  id="body"
>
  <tr
    key="d79168ed-ae95-43d1-8e45-9078212815f6"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/d79168ed-ae95-43d1-8e45-9078212815f6/3"
      >
        <a
          href="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/d79168ed-ae95-43d1-8e45-9078212815f6/3"
          onClick={[Function]}
        >
          Lang Son Province
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
  <tr
    key="c13b5c95-55c3-4848-9509-b82596274d96"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/c13b5c95-55c3-4848-9509-b82596274d96/3"
      >
        <a
          href="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/c13b5c95-55c3-4848-9509-b82596274d96/3"
          onClick={[Function]}
        >
          Dien Bien
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
  <tr
    key="78a12165-3c12-471f-8755-c96bac123292"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/78a12165-3c12-471f-8755-c96bac123292/3"
      >
        <a
          href="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/78a12165-3c12-471f-8755-c96bac123292/3"
          onClick={[Function]}
        >
          Hanoi
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      10
    </td>
    <td
      className="default-width "
    >
      9
    </td>
    <td
      className="default-width "
    >
      6
    </td>
    <td
      className="default-width"
    >
      25
    </td>
  </tr>
  <tr
    key="f7d1d9bb-95dc-43bc-8434-0dddd1f3d374"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/f7d1d9bb-95dc-43bc-8434-0dddd1f3d374/3"
      >
        <a
          href="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/f7d1d9bb-95dc-43bc-8434-0dddd1f3d374/3"
          onClick={[Function]}
        >
          Loc Binh
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      Province
      )
    </td>
    <td
      className="default-width "
    >
      10
    </td>
    <td
      className="default-width "
    >
      9
    </td>
    <td
      className="default-width "
    >
      6
    </td>
    <td
      className="default-width"
    >
      25
    </td>
  </tr>
</tbody>
`;
